--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -8,8 +8,83 @@ tags:
   - category2
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+## What does a blog look like?
 
+##   
+
+A blog consists of a series of articles or posts. While the appearance of your blog can vary depending on the platform and design choices made by you as the blogger, here are some common elements you may find in a typical blog and include in your own, keeping in mind the importance of user experience design and web design:
+
+  
+
+###   
+
+### Header
+
+  
+
+The top section of a blog often contains your blog's title or logo, along with a navigation menu that helps visitors explore different sections or categories of your blog. You might decide to categorize blogs from the same topic together, for repeat readers who are looking specifically from posts from that area of interest.
+
+  
+
+###   
+
+### Content body
+
+###   
+
+This is where the content of your blog posts is displayed. Each post usually includes a title, author name, date of publication, and the main content of the post, which can include text, images, videos, or other multimedia.
+
+  
+
+###   
+
+### Sidebar
+
+  
+
+A blog may have a sidebar on one or both sides of the main content area. The sidebar often contains additional information or features such as a search bar, recent posts, popular posts, categories, tags, social media links, an about section, and advertisements. You can this part of your blog to help establish your blogs navigation, and site hierarchy to users and search engines.
+
+  
+
+###   
+
+### Comments
+
+  
+
+Many blogs allow readers to leave comments on their posts. The comments section typically appears below the main content of each post and may include the ability for readers to reply to comments or upvote them. Before enabling comments on your blog, make sure you have the time and resources to manage comments effectively. You'll need to monitor them for spammy messages which should be deleted, or for messages from genuine readers who you'll need to connect with.
+
+  
+
+  
+
+### Footer
+
+  
+
+The bottom section of your blog usually contains copyright information, links to your privacy policy and terms of service, additional navigation links, and sometimes widgets like a subscription form, social media icons [(social share buttons)](https://www.wix.com/encyclopedia/definition/social-share-button), or related posts.
+
+  
+
+Blog designs can vary greatly depending on the theme, customization options, and personal preferences that you chose. These elements provide a general overview of what a blog looks like, but blogs may have unique layouts or additional features based on your chosen platform and your design choices.
+
+  
+
+Generally to create and manage a blog, you'll need a blog platform or [CMS](https://www.wix.com/encyclopedia/definition/content-management-system-cms). Within this you'll also need a domain name and web hosting service like [Wix hosting](https://www.wix.com/free/web-hosting).
+
+  
+
+  
+
+## Types of blogs
+
+  
+
+Different [types of blogs](https://www.wix.com/blog/types-of-blogs) cover varying topics, from food and fashion to marketing. Blogs are composed of individual posts on more specific subjects within the blog’s field of expertise. To get started with blogs on social media, [check out microblogging](https://www.wix.com/blog/microblogging). These posts often serve as a platform for discussions, as many blogs have active comments sections. You can think of a blog almost as a newspaper that adds articles and continually maintains the archive.
+
+  
+
+Whether you’ve seen stand-alone blogs or blogs as website sections, you’ve probably encountered [blog examples](https://www.wix.com/blog/blog-examples) all over the internet. Some of the most popular types of blogs in the [blogosphere](https://www.wix.com/encyclopedia/definition/blogosphere) include:
 Headings are cool
 ======
 
