--- a/_posts/2014-08-14-blog-post-3.md
+++ b/_posts/2014-08-14-blog-post-3.md
@@ -9,7 +9,8 @@ tags:
   - category2
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool. 
+A blog consists of a series of articles or posts. While the appearance of your blog can vary depending on the platform and design choices made by you as the blogger, here are some common elements you may find in a typical blog and include in your own, keeping in mind the importance of user experience design and web design:
+
 
 Headings are cool
 ======
