--- a/_posts/2015-08-14-blog-post-4.md
+++ b/_posts/2015-08-14-blog-post-4.md
@@ -1,9 +1,10 @@
 ---
-title: 'Blog Post number 4'
+title: Blog Post number 4
 date: 2015-08-14
-permalink: /posts/2012/08/blog-post-4/
+permalink: /posts/2015/08/blog-post-4/
 tags:
-  - cool posts
+  - cool
+  - posts
   - category1
   - category2
 ---
